Tweak default panel setup and button / tab visibility - Bug #97596 r=toddw
(integrated from komodo (trunk) change 77407 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11997 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/komodo.p.css
+++ b/src/chrome/komodo/skin/komodo.p.css
@@ -445,6 +445,10 @@ separator.groovy-thin
     height: 0px;
 }
 
+view.startpage-single-tab tabbox tabs {
+  visibility: collapse !important;
+}
+
 /* add some exra space between a tab icon and the tab text */
 tab > .tab-text {
   padding-left: 3px;
